--- a/Bibliothouris/BibliothourisTests/BibliothourisTests.csproj
+++ b/Bibliothouris/BibliothourisTests/BibliothourisTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Books\BookRepositoryTests.cs" />
     <Compile Include="Source\Books\BookTests.cs" />
   </ItemGroup>
   <ItemGroup>
