--- a/Bibliothouris/Bibliothouris/Bibliothouris.csproj
+++ b/Bibliothouris/Bibliothouris/Bibliothouris.csproj
@@ -61,11 +61,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\BookForm\Form1.cs">
+    <Compile Include="Forms\BookForm\BookList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\BookForm\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\BookForm\BookList.Designer.cs">
+      <DependentUpon>BookList.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\UserAddForm.cs">
       <SubType>Form</SubType>
@@ -92,8 +92,8 @@
     <Compile Include="Source\User\UserController.cs" />
     <Compile Include="Source\User\UserRepository.cs" />
     <Compile Include="Source\User\UserService.cs" />
-    <EmbeddedResource Include="Forms\BookForm\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\BookForm\BookList.resx">
+      <DependentUpon>BookList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserAddForm.resx">
       <DependentUpon>UserAddForm.cs</DependentUpon>
