--- a/Bibliothouris/Bibliothouris/Bibliothouris.csproj
+++ b/Bibliothouris/Bibliothouris/Bibliothouris.csproj
@@ -79,9 +79,16 @@
     <Compile Include="Forms\BookForm\SearchBooks.Designer.cs">
       <DependentUpon>SearchBooks.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Members\MemberController.cs" />
-    <Compile Include="Forms\Members\MembersForm.cs" />
-    <Compile Include="Forms\Members\MembersForm.Designer.cs">
+    <Compile Include="Forms\MemberForms\MemberAddForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberForms\MemberAddForm.Designer.cs">
+      <DependentUpon>MemberAddForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MemberForms\MembersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MemberForms\MembersForm.Designer.cs">
       <DependentUpon>MembersForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\UserAddForm.cs">
@@ -104,6 +111,9 @@
     <Compile Include="Source\Books\BookRepository.cs" />
     <Compile Include="Source\Books\BookService.cs" />
     <Compile Include="Source\Members\Member.cs" />
+    <Compile Include="Source\Members\MemberController.cs" />
+    <Compile Include="Source\Members\MemberRepository.cs" />
+    <Compile Include="Source\Members\MemberService.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\User\User.cs" />
@@ -119,7 +129,10 @@
     <EmbeddedResource Include="Forms\BookForm\SearchBooks.resx">
       <DependentUpon>SearchBooks.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Members\MembersForm.resx">
+    <EmbeddedResource Include="Forms\MemberForms\MemberAddForm.resx">
+      <DependentUpon>MemberAddForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MemberForms\MembersForm.resx">
       <DependentUpon>MembersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserAddForm.resx">
@@ -174,7 +187,6 @@
     <Content Include="obj\Debug\Bibliothouris.csproj.FileListAbsolute.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Forms\MemberForm\" />
     <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
