--- a/Bibliothouris/Bibliothouris/Bibliothouris.csproj
+++ b/Bibliothouris/Bibliothouris/Bibliothouris.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Forms\MemberForms\MembersForm.Designer.cs">
       <DependentUpon>MembersForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Rental\RentalView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Rental\RentalView.Designer.cs">
+      <DependentUpon>RentalView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\UserAddForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,7 @@
     <Compile Include="Source\Members\MemberService.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Rental\RentalController.cs" />
     <Compile Include="Source\User\User.cs" />
     <Compile Include="Source\User\UserController.cs" />
     <Compile Include="Source\User\UserRepository.cs" />
@@ -134,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MemberForms\MembersForm.resx">
       <DependentUpon>MembersForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Rental\RentalView.resx">
+      <DependentUpon>RentalView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserAddForm.resx">
       <DependentUpon>UserAddForm.cs</DependentUpon>
